[package]
name = "shodan-rust"
version = "1.0.1"
edition = "2024"
authors = ["Ozgur <ozgur@goosey.org>"]
description = "An async Shodan API client written in Rust"
license = "MIT"
repository = "https://github.com/gooseyinc/shodan-rust"
readme = "README.md"
keywords = ["shodan", "cybersecurity", "api", "client", "rust"]
categories = ["api-bindings", "network-programming"]
documentation = "https://docs.rs/shodan-rust"
homepage = "https://github.com/gooseyinc/shodan-rust"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }